--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PINECONE_API_KEY = "159e533b-5d20-4f3c-93c1-5277f3df9cdb"
 OPENAI_API_KEY = "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"
+HTTP_PROXY "http://50.168.210.239:80 python main.py"
