--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PINECONE_API_KEY = "159e533b-5d20-4f3c-93c1-5277f3df9cdb"
-OPENAI_API_KEY = "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"
-HTTP_PROXY "http://50.168.210.239:80 python main.py"
+OPENAI_API_KEY = "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"
+INDEX = "secon-1"
+HTTP_PROXY = "http://9AqxoY:pbb8nF@94.127.136.29:8000"
